--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"@nuxtjs/pwa": "^3.0.0-0",
 		"bootstrap": "^4.1.3",
 		"bootstrap-vue": "^2.0.0",
-		"nuxt": "^2.11.0"
+		"nuxt": "^2.11.0",
+		"vue-country-region-select": "^2.0.13"
 	},
 	"devDependencies": {
 		"@nuxtjs/vuetify": "^1.11.0",
