--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
 		"@nuxtjs/pwa": "^3.0.0-0",
 		"bootstrap": "^4.1.3",
 		"bootstrap-vue": "^2.0.0",
+		"chartist": "^0.11.4",
+		"dat.gui": "^0.7.7",
+		"jquery": "^3.5.0",
 		"nuxt": "^2.11.0",
 		"vue-country-region-select": "^2.0.13"
 	},
