--- a/package.json
+++ b/package.json
@@ -1,37 +1,37 @@
 {
-	"name": "lra-v.0.4.0",
-	"version": "1.0.0",
-	"description": "project for a group of global missionaries",
-	"author": "csconway",
-	"private": true,
-	"license": "GPL-3.0",
-	"scripts": {
-		"dev": "nuxt",
-		"build": "nuxt build",
-		"start": "nuxt start",
-		"generate": "nuxt generate",
-		"test": "jest"
-	},
-	"dependencies": {
-		"@babel/core": "^7.0.0",
-		"@nuxtjs/axios": "^5.3.6",
-		"@nuxtjs/dotenv": "^1.4.0",
-		"@nuxtjs/pwa": "^3.0.0-0",
-		"bootstrap": "^4.1.3",
-		"bootstrap-vue": "^2.0.0",
-		"chartist": "^0.11.4",
-		"dat.gui": "^0.7.7",
-		"jquery": "^3.5.0",
-		"nuxt": "^2.11.0",
-		"vue-country-region-select": "^2.0.13"
-	},
-	"devDependencies": {
-		"@nuxtjs/vuetify": "^1.11.0",
-		"@vue/test-utils": "^1.0.0-beta.27",
-		"babel-jest": "^24.1.0",
-		"jest": "^24.1.0",
-		"node-sass": "^4.13.1",
-		"sass-loader": "^8.0.2",
-		"vue-jest": "^4.0.0-0"
-	}
+  "name": "lra-v.0.4.0",
+  "version": "1.0.0",
+  "description": "project for a group of global missionaries",
+  "author": "csconway",
+  "private": true,
+  "license": "GPLv-3.0",
+  "scripts": {
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/dotenv": "^1.4.0",
+    "@nuxtjs/pwa": "^3.0.0-0",
+    "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0",
+    "chartist": "^0.11.4",
+    "dat.gui": "^0.7.7",
+    "jquery": "^3.5.0",
+    "nuxt": "^2.11.0",
+    "vue-country-region-select": "^2.0.13"
+  },
+  "devDependencies": {
+    "@nuxtjs/vuetify": "^1.11.0",
+    "@vue/test-utils": "^1.0.0-beta.27",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "vue-jest": "^4.0.0-0"
+  }
 }
